--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 /* Other rules */
+
 body {
-  background-color: #f5f6f7;
+  /* background-color: red; */
+  /* max-width: 1024px; */
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .imgAvatar {
   width: 30px;
@@ -48,3 +55,23 @@ body {
   padding: 20px;
   box-sizing: content-box;
 }
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.flex-item {
+  border: 1px solid black;
+  box-sizing: border-box;
+  flex: 25%;
+  display: flex;
+  justify-content: center;
+}
+
+/* 
+* {
+  box-sizing: border-box;
+} */
