--- a/src/components/Header-Hero.css
+++ b/src/components/Header-Hero.css
@@ -29,3 +29,21 @@
   background-color: #09aeb7;
   border: white;
 }
+
+.hero {
+  max-width: 100%;
+}
+
+.heroContainer {
+  position: relative;
+  background-image: url(../assets/img/heroImg.jpg);
+  width: 100%;
+  height: 500px;
+  background-position: 50%;
+  background-size: cover;
+}
+
+.tear {
+  position: absolute;
+  bottom: 0;
+}
