--- a/src/pages/Offer.css
+++ b/src/pages/Offer.css
@@ -9,7 +9,7 @@
   /* border: solid 2px red; */
   flex: 3;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .offerTextBlock {
   /* background-color: white; */
