--- a/src/pages/Publish.css
+++ b/src/pages/Publish.css
@@ -15,6 +15,13 @@
   border: grey solid 1px;
 }
 
+.publishForm .valid-btn {
+  width: 100px;
+  background-color: #0cadb7;
+  color: white;
+  border: none;
+}
+
 .publishForm textarea {
   width: 500px;
   height: 150px;
